--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,9 @@
     <string name="usuarioo">Usuario</string>
     <string name="origen">Origen:</string>
     <string name="destino">Destino:</string>
+    <string name="galeria">Galeria</string>
+    <string name="camara">Camara</string>
+    <string name="informacion_cuenta">Información cuenta</string>
+    <string name="cerrar_sesion">Cerrar sesión</string>
+    <string name="nombre_atraccion">Nombre de la atracción</string>
 </resources>
