--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WaitLess_P1</string>
+    <string name="app_name">Waitless</string>
     <string name="empezar">Empezar</string>
     <string name="usuario">Usuario</string>
     <string name="bienvenido">¡Bienvenido a Wait Less!</string>
